@@ -5,7 +5,7 @@
       "Fully Managed PostgreSQL",
       "Dedicated Postgres Database",
       "Optimized Database Instances",
-      "Realtime Functionality"
+      "Realtime Change Data Capture"
     ],
     "rows": [
       {
